# formatted-io-util

./: .gitignore  CMakeLists.txt  FCrisanFormattedIOUtilConfig.cmake.in  README.md
.github/workflows/: cmake.yml
include/fcrisan/formatted-io-util/: chars.hpp  exception.hpp  type_info.hpp
src/: chars.cpp  exception.cpp  type_info.cpp
unittest/: chars.cpp  exception.cpp  type_info.cpp
